feat: init consensus block logic